// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders private page with menu 1`] = `
<div
  className="App"
>
  <div
    className="ui menu"
  >
    <div
      className="header item"
      onClick={[Function]}
    >
      <a
        href="/home"
        onClick={[Function]}
      >
        Compras
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <a
        href="/theme"
        onClick={[Function]}
      >
        Theme
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <a
        href="/logout"
        onClick={[Function]}
      >
        <button
          className="ui button"
          onClick={[Function]}
          role="button"
        >
          Logout
        </button>
      </a>
    </div>
  </div>
  Testing
  <p>
    Version 
    0.1.0
  </p>
</div>
`;

exports[`Renders public page without menu 1`] = `
<div
  className="App"
>
  Testing
  <p>
    Version 
    0.1.0
  </p>
</div>
`;
